# h5fortran-mpi

./: .gitignore  .mypy.ini  API.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  codemeta.json  fpm.toml  mpi_h5write.f90  options.cmake  out3f_driver.f90  out3f_mpi_h5.f90  pyproject.toml  requirements.txt  simple.f90  simple_slab.f90  write.f90  write.in.f90
.github/workflows/: ci.yml  ci_build.yml  ci_fpm.yml  ci_macos.yml  intel-oneapi.yml  oneapi-windows.yml  oneapi_run_windows.bat
Examples/: CMakeLists.txt  example1.f90
archive/: FindMPI.cmake  out3f_driver.f90  out3f_mpi_h5.f90
benchmark/: CMakeLists.txt  Readme.md  bench_plot.py  bench_slab.py  cli.f90  cpu.cpp  cpu_count.cpp  cpu_count.h  frontend.f90  median.f90  perf.in.f90
benchmark/test/: CMakeLists.txt  slab_mpi_read.f90  slab_mpi_serial_read.f90  slab_mpi_serial_write.f90  slab_mpi_write.f90  slab_serial_read.f90  slab_serial_write.f90  utils.f90
cmake/: ExtProj.cmake  FindHDF5.cmake  SetTargProps.cmake  check_mpi.cmake  compilers.cmake  config.cmake.in  gcd.cmake  hdf5.cmake  hdf5_compression.cmake  hwloc-fortran.cmake  hwloc.cmake  install.cmake  libraries.cmake  libraries.json  libraries_hdf5.cmake  options.cmake  zlib.cmake
cmake/Modules/: FindHDF5.cmake  FindMPI.cmake
cmake/Modules/MPI/: FindMPI.cmake
cmake/abi_check/: CMakeLists.txt
example/: CMakeLists.txt  example1.f90
reference/: CMakeLists.txt  simple.f90  write_char.f90  write_collective.f90
scripts/: CMakeLists.txt  bench_plot.py  bench_slab.py  utils.py
src/: CMakeLists.txt  attr.f90  attr_read.f90  attr_write.f90  attributes.f90  fpm_config.f90  frontend.f90  h5fortran_parallel.f90  hdf5_config.f90.in  hdf5_config.in.f90  interface.f90  mpi.F90  mpi_h5write.f90  partition.f90  read.f90  read_ascii.f90  read_scalar.f90  read_scalar_ascii.f90  reader.f90  reader.in.f90  reader.inc  reader_lt.f90  reader_template.f90  simple_slab.f90  simsize.txt  slab_mpi.f90  slab_mpi_serial.f90  slab_serial.f90  utils.f90  write.f90  write.in.f90  write_scalar.f90  writer.f90  writer.in.f90  writer.inc  writer_template.f90  writer_template.inc  writer_template_r32.f90  writer_template_r64.f90
src/hwloc/: CMakeLists.txt  get_cpu_hwloc.c  hwloc_ifc.f90
src/pathlib/: test_pathlib.f90
src/read/: CMakeLists.txt  read.f90  reader.in.f90  reader_template.f90
src/reference/: CMakeLists.txt
src/tests/: CMakeLists.txt  slab_mpi.f90  slab_mpi_read.f90  slab_mpi_serial.f90  slab_mpi_serial_read.f90  slab_mpi_serial_write.f90  slab_mpi_write.f90  slab_serial.f90  slab_serial_read.f90  slab_serial_write.f90  utils.f90
src/tests/unit/: CMakeLists.txt  test_attributes.f90  test_cast.f90  test_deflate.f90  test_deflate_props.f90  test_deflate_read.f90  test_destructor.f90  test_exist.f90  test_groups.f90  test_layout.f90  test_scalar.f90  test_shape.f90  test_string.f90
src/utils/: CMakeLists.txt  cli.f90  count_cpu.f90  frontend.f90  kernel.f90  partition.f90  perf.f90  perf.in.f90  test_kernel.f90
src/write/: CMakeLists.txt  write.f90  writer.in.f90  writer_template.f90  writer_template_i32.f90  writer_template_r32.f90
test/: CMakeLists.txt  cpu_count.cpp  test_array.f90  test_array_mpi.f90  test_attributes.f90  test_attributes_mpi.f90  test_cast_mpi.f90  test_deflate_props.f90  test_deflate_read.f90  test_deflate_read_mpi.f90  test_deflate_write.f90  test_deflate_write_mpi.f90  test_destructor.f90  test_exist.f90  test_fill.f90  test_groups.f90  test_layout.f90  test_shape.f90  test_string.f90  test_string_read.f90  test_write.f90
test/benchmarks/: CMakeLists.txt  slab_mpi_read.f90  slab_mpi_serial_write.f90
test/mpi/: CMakeLists.txt  runner.f90  test_array.f90  test_deflate_props.f90  test_deflate_read.f90  test_deflate_write.f90  test_exist.f90  test_exist_mpi.f90  test_fill.f90  test_layout.f90  test_shape.f90  test_string.f90  test_string_read.f90  test_write.f90
test/nompi/: CMakeLists.txt  test_array.f90  test_groups.f90
test/unit/: CMakeLists.txt  test_string.f90  utils.f90
tests/benchmarks/: slab_mpi_write.f90
tests/unit/: test_exist.f90
